hide a bunch of messages i think are useless
there's a bunch of noisy status messages like the topic, mode, "you
disconnected", etc, so just hide all of those.

--- a/design.css
+++ b/design.css
@@ -303,3 +303,7 @@ body .sender[type*=normal][colornumber='30'] { color: #b5a0e1; }
 .effect[bgcolor-number='13'] { background-color: #ff00ff; }
 .effect[bgcolor-number='14'] { background-color: #888888; }
 .effect[bgcolor-number='15'] { background-color: #cccccc; }
+
+.mode, .topic, .disconnect, .aaronj1335-join, .quit-query, .join-query {
+  display: none;
+}
